style.css
@import url('https://googleapis.com');

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
    background-color: ghostwhite;
    font-family: 'Inter', sans-serif;
}

nav {
    height: 60px;
    width: 100%;
    background-color: rgb(255, 255, 255);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0px 2rem;
    box-shadow: 0px 0px 3px rgba(135, 135, 135, 0.353);
}

.links {
    display: flex;
    list-style: none;
    gap: 5rem;
    padding: 0.75rem;
    font-size: 1.1em;
    font-weight: 500;
    color: #000000;
}

.pfp {
    height: 50px;
    width: 50px;
    background-color: rgb(255, 255, 255);
    border-radius: 50%;
    border: 1px solid rgba(0, 0, 0, 0.196);
}


.link {
  padding: 10px 15px;
  border: 2px solid #2c2c2c;
  background-color: #1a1a1a;
  color: #ffffff;
  font-size: 0.8rem;
  cursor: pointer;
  border-radius: 30px;
  transition: all 0.4s ease;
  outline: none;
  position: relative;
  overflow: hidden;
  font-weight: bold;
}

.link::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(
    circle,
    rgba(255, 255, 255, 0.25) 0%,
    rgba(255, 255, 255, 0) 70%
  );
  transform: scale(0);
  transition: transform 0.5s ease;
}

.link:hover::after {
  transform: scale(4);
}

.link:hover {
  border-color: #666666;
  background: #292929;
}


.button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px 15px;
  gap: 15px;
  background-color: #181717;
  outline: 3px #181717 solid;
  outline-offset: -3px;
  border-radius: 5px;
  border: none;
  cursor: pointer;
  transition: 400ms;
}

.button .text {
  color: white;
  font-weight: 700;
  font-size: 1em;
  transition: 400ms;
}

.button svg path {
  transition: 400ms;
}

.button:hover {
  background-color: transparent;
}

.button:hover .text {
  color: #181717;
}

.button:hover svg path {
  fill: #181717;
}

.hero {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 50vh;
}

.text-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1em;
}

.logos {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 10%;
    width: 10%;
}

.hello {
    font-size: 1.1em;
    font-weight: 500;
}

.front {
    font-size: 2em;
    font-weight: 900;
}

.caption {
    color: rgb(86, 86, 86);
    max-width: 60%;
}

